--- a/hello-sprint/build.gradle
+++ b/hello-sprint/build.gradle
@@ -15,7 +15,12 @@ repositories {
 dependencies { 
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // thymeleaf 라이브러리
 	implementation 'org.springframework.boot:spring-boot-starter-web' // web 라이브러리
-	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 자동으로 들어가는 라이브러리
+	//implementation 'org.springframework.boot:spring-boot-starter-jdbc' // jdbc 템플릿 사용 시 필요한 설정
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 test {
