--- a/core/core/build.gradle
+++ b/core/core/build.gradle
@@ -8,13 +8,30 @@ group = 'heiil'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+// 롬복 설정 추가 시작
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+//끝
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.20'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// 롬복 라이브러리 추가 시작
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	// 롬복 라이브러리 추가 끝
 }
 
 test {
