--- a/validation/src/main/resources/errors.properties
+++ b/validation/src/main/resources/errors.properties
@@ -38,3 +38,11 @@ max= {0} 까지 허용합니다.
 #타입오류 메시지 추가
 typeMismatch.java.lang.Integer = 숫자를 입력해 주세요.
 typeMismatch = 타입 오류입니다.
+
+#BeanValidator 추가
+
+NotBlank.item.itemName=상품명 입력하세요
+
+NotBlank={0} 공백 X
+Range={0}, {2} ~ {1} 허용
+Max={0}, 최대 {1}
